--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 openai = "^0.28.1"
 langchain = {extras = ["all"], version = "^0.0.306"}
 sparqlwrapper = "^2.0.0"
+fastapi = "^0.104.1"
+uvicorn = "^0.23.2"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.2"
