--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ openai = "^0.28.1"
 langchain = {extras = ["openai"], version = "^0.0.306"}
 sparqlwrapper = "^2.0.0"
 loguru = "^0.7.2"
+fastapi = "^0.104.1"
+uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.2"
