--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -46,7 +46,7 @@ jobs:
             type=semver,prefix=v,pattern={{version}}
             type=semver,prefix=v,pattern={{major}}.{{minor}}
             type=semver,prefix=v,pattern={{major}}
-            type=sha
+            type=raw,value=dev-{{branch}}-{{date 'YYYYMMDDHHmmss' tz='UTC'}}
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker images
