--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sparqlwrapper = "^2.0.0"
 loguru = "^0.7.2"
 fastapi = "^0.104.1"
 uvicorn = {version = "^0.24.0.post1", extras = ["standard"]}
+jinja2 = "^3.1.4"
+python-multipart = "^0.0.19"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.2"
